--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
 
 .logo {
   width: 100%;
-  padding: 20px 20px 40px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -89,7 +89,7 @@ button.clear {
 
 .footer {
   text-align: center;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .footer p,
